--- a/01.Entrance-styles.css
+++ b/01.Entrance-styles.css
@@ -1,49 +1,57 @@
 ﻿body {
-    background:url('pictures/background.png');
-    background-repeat: no-repeat ;
-    
+    background: url('pictures/background.png');
+    background-repeat: no-repeat;
 }
 
 * {
-    margin:0px;
-    padding:0px;
-    box-sizing:border-box;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
-a img{
-    display:inline-block;
-    float: left;
+
+header:hover {
+    border: 10px dotted;
+    border-color:rgba(238, 146, 40, 0.5);
+    border-radius: 15px;
+    padding: 20px;
+    -webkit-transition-duration:1s;
+    background-color:plum;
+    
+    
     
 }
 
-    a img:hover {
-        border: 5px dotted blue;
-        border-radius:7px;
-    }
 header {
-    
-    font-family:"komikax", Calibri, 'Times New Roman';
-    display:inline-block;
-    color:#EE9228;
-    
+    font-family: "komikax", Calibri, 'Times New Roman';
+    display: inline-block;
+    width:100%;
+    text-align:center;
+    border: 10px dotted #ffd800;
+    border-radius: 15px;
 }
 
 h1 {
-    float:left;
-    display:inline-block;
-    font-size:200%;
-    text-shadow: 3px 0px 0px black;
-    margin-left: 30px;
     
+    display: inline-block;
+    font-size: 200%;
+    text-shadow: 3px 0px 0px black;
+}
+
+a {
+    text-decoration-color:none;
+    color: #EE9228;
+    
+
 }
 
 @font-face {
-    font-family:"komikax";
-    src:url('font/KOMIKAX_.ttf') format('truetype');
+    font-family: "komikax";
+    src: url('font/KOMIKAX_.ttf') format('truetype');
 }
 
 @media screen and (max-width:320px) {
-    h1{
+    h1 {
         margin-left: 10px;
     }
 }
