--- a/02.MainPage-styles.css
+++ b/02.MainPage-styles.css
@@ -1,132 +1,3 @@
-﻿body {
-    background:url('pictures/clouds.gif') repeat;
-    font-family:"komikax", Calibri, 'Times New Roman';
-    font-size:150%;
-    height:100%;
-}
-
-header {
-    margin-left: 10%;
-    display:inline-block;
-}
-
-h1 {
-    background-color:none;
-    text-shadow: 10px 10px 5px #808080;
-}
-
-h2 {
-    margin-left:10%;
-    color:green;
-}
-
-#nav{
-    width:100%;
-    height:auto;
-    text-align:center;
-    
-    
-}
-
-    section nav ul li {
-        
-        background-color:gold;
-        display:inline-block;
-        left:10%;
-        width:auto;
-    }
-
-* {
-    margin:0px;
-    padding:0px;
-    box-sizing:border-box;
-}
-
-@media screen and (max-width:320px) {
-    header{
-        font-size: 150%;
-        
-    }
-
-}
-
-footer {
-    display:inline-block;
-    background-color:gold;
-    width:100%;
-    height:auto;
-    text-align:center;
-    position:absolute;
-    bottom:0px;
-    z-index:150;
-    left:0;
-    right:0;
-}
-
-    footer nav ul li {
-        display:inline-block;
-        left:10%;
-        width:auto;
-        
-    }
-   
-    
-@font-face {
-    font-family:"komikax";
-    src:url('font/KOMIKAX_.ttf') format('truetype');
-}
-
-a {
-    text-decoration: none;
-    color:blue;
-}
-    a:visited {
-        background-color:none;
-    }
-    a:hover {
-        color:red;
-    }
-
-#wrapper {
-    min-height:100%;
-    position:relative;
-}
-#main-about {
-    margin:5px;
-    padding: 5px;
-}
-
-#profiles {
-    max-width:100%;
-    
-}
-figure{
-    display:block;
-    padding:10px;
-    border:1px solid green;
-    margin: 5%;
-    background-color: white;
-    
-}
-
-figcaption {
-    font-size:20px;
-    margin: 5% auto;
-    width: 100%;
-}
+﻿ 
 
 
-
-section div {
-        display:inline-block;
-        text-align: center;
-        width:300px;
-        height:192px;
-        
-}
-
-    section div figure img{
-        max-width:100%;
-        max-height:100%;    
-
-    }
