--- a/main-styles.css
+++ b/main-styles.css
@@ -40,9 +40,9 @@ section nav ul li {
 }
 
     section nav ul li:hover {
-        color: white;
-        border: 3px solid red;
+        border: 4px solid red;
         border-radius: 10px;
+        margin-right: 5px;
     }
 
 @font-face {
@@ -63,24 +63,34 @@ a {
 footer {
     background-color: gold;
     width: 100%;
-    height: 50px;
+    height: auto;
     text-align: center;
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     display: block;
-
+    padding: 10px;
 }
+
+    footer nav ul li a:hover {
+        color: purple;
+        border: 4px solid red;
+        border-radius: 10px;
+        margin-right: 5px;
+    }
 
     footer nav ul li {
         display: inline-block;
-        left: 10%;
-        width: auto;
     }
+
 
 @media screen and (max-width:320px) {
     header {
         font-size: 150%;
     }
+}
+
+img {
+    max-width: 100%;
 }
