--- a/06.Contacts-styles.css
+++ b/06.Contacts-styles.css
@@ -1,15 +1,34 @@
-﻿#soft-uni, #elysium {
-    width:40%;
-    margin:1%;
-    padding:5%;
+﻿#main {
+    margin:10px;
+    align-content:center;
+    
+}
+
+#soft-uni, #elysium {
+    width:590px;
+    height:auto;
+    margin:10px 20px;
+    padding:20px;
     display: inline-block;
     float: left;
+    background-color:rgba(255, 255, 255, 0.7);
+    border:1px solid green;
+    border-radius:5px;
 }
 
 h4 {
+    width:auto;
+    text-align:center;
+    background-color:#FFD900;
+    color:black;
     font-size:30px;
+    border:2px solid black;
+    border-radius:5px;
+    padding:10px;
+    margin:10px;
+   
 }
 
-body {
-    font-size:20px;
+articles {
+    
 }
