--- a/main-styles.css
+++ b/main-styles.css
@@ -8,7 +8,7 @@ body {
     background: url('pictures/clouds.gif') repeat;
     font-family: "komikax", Calibri, 'Times New Roman';
     font-size: 150%;
-    height: 100%;
+    
 }
 
 header {
@@ -27,6 +27,7 @@ h1 {
     width: 100%;
     height: auto;
     text-align: center;
+    margin-top:20px;
 }
 
 section nav ul li {
@@ -42,7 +43,7 @@ section nav ul li {
     section nav ul li:hover {
         border: 4px solid red;
         border-radius: 10px;
-        margin-right: 5px;
+        
     }
 
 @font-face {
