--- a/main-styles.css
+++ b/main-styles.css
@@ -68,8 +68,7 @@ footer {
     text-align: center;
     position: absolute;
     bottom: 0;
-    left: 0;
-    right: 0;
+    
     display: block;
     padding: 10px;
 }
@@ -85,10 +84,15 @@ footer {
         display: inline-block;
     }
 
+@media screen and (max-width:1024px){
+    body {
+        font-size:100%;
+    } 
+}
 
 @media screen and (max-width:320px) {
-    header {
-        font-size: 150%;
+    body {
+        font-size: 50%;
     }
 }
 
