--- a/06.Contacts-styles.css
+++ b/06.Contacts-styles.css
@@ -1,4 +1,5 @@
 ﻿#main {
+    
     margin:10px;
     align-content:center;
     
@@ -6,7 +7,7 @@
 
 #soft-uni, #elysium {
     width:590px;
-    height:auto;
+    height:530px;
     margin:10px 20px;
     padding:20px;
     display: inline-block;
@@ -16,21 +17,24 @@
     border-radius:5px;
 }
 
-h4 {
+h2 {
     width:auto;
     text-align:center;
     background-color:rgba(255, 216, 0, 0.7);
     color:black;
-    font-size:30px;
-    border:2px solid black;
+    border:1px solid green;
     border-radius:5px;
     padding:10px;
     margin:10px;
    
 }
 
-@media scree and (max-width:1024px){
+
+
+@media scree and (max-width:1285px){
+    
     articles {
-        width:100%;
-    } 
+        width:850px;
+        height:auto;
+    }
 }
