--- a/02.MainPage-styles.css
+++ b/02.MainPage-styles.css
@@ -1,7 +1,9 @@
 ﻿#main {
-    margin:30px;
-    width:800px;
-    padding:20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+   padding:30px;
+   
     
     
 }
@@ -10,6 +12,7 @@ article {
     background-color:rgba(255, 255, 255, 0.7);
     border:1px solid green;
     border-radius:5px;
+    padding:50px;
 
 
 }
