--- a/04.News-styles.css
+++ b/04.News-styles.css
@@ -1,6 +1,29 @@
-﻿figure {
-    content:url(pictures/revenge.jpg)
+﻿#fart {
+    content: url(pictures/revenge.jpg);
 }
-figure:hover {
-    content:url(pictures/revenge-drawn.jpg)
+
+#fart:hover {
+        content: url(pictures/revenge-drawn.jpg);
+    }
+
+#entrance {
+    content: url(pictures/entrance.png);
+}
+figcaption {
+    font-style: italic;
+    font-size: 0.7em;
+    color: purple;
+    margin: 10px;
+}
+
+span {
+    text-decoration: underline;
+}
+
+#jokes div {
+    padding: 20px;
+    margin: 10px;
+    display:inline-block;
+   
+    
 }
