--- a/04.News-styles.css
+++ b/04.News-styles.css
@@ -1,4 +1,16 @@
-﻿#fart {
+﻿#jokes div {
+    padding: 20px;
+    margin: 10px;
+    display:block;
+    border:1px solid green;
+    background-color:rgba(255, 255, 255, 0.7);
+    text-align:center;
+}
+
+figure {
+    margin:auto;
+}
+#fart {
     content: url(pictures/revenge.jpg);
 }
 
@@ -9,21 +21,25 @@
 #entrance {
     content: url(pictures/entrance.png);
 }
+#teo {
+    content:url(pictures/easy-teo.png);
+}
+
+#nakov {
+    content:url(pictures/not-valid.png);
+}
+
 figcaption {
+    background-color:rgba(255, 216, 0, 0.7);
     font-style: italic;
     font-size: 0.7em;
     color: purple;
     margin: 10px;
+    
 }
 
 span {
     text-decoration: underline;
 }
 
-#jokes div {
-    padding: 20px;
-    margin: 10px;
-    display:inline-block;
-   
-    
-}
+
