jokes.html + малко снимки
конзола, която вади рандом майтап

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-body{ 
-}
+/*---OPENER---*/
 #wrap{
     margin:auto;
     margin-top:-10px;
@@ -48,8 +47,6 @@ body{
     background-color:#00419b;
     opacity:0.4;
 }
-
-
 main{
     height:300px;
     width:300px;
@@ -57,4 +54,74 @@ main{
 #wraper{
    height:300px;
     width:300px;
+}
+
+/*---JOKES---*/
+
+#jokes>li{
+    display:none;
+}
+#cont{
+    position:relative;
+    background-image:url(pictures/oldschool.png);
+    font-family:Consolas;
+    font-size:20px;
+    color:#37be09;
+    width:1080px;
+    height:700px;
+    background-size:1080px 700px;
+    margin:auto;
+    border:solid 14px;
+    border-color:#7e8083;
+    border-radius:29px;
+}
+#jbody{
+    height:100%;
+    background-image:url(pictures/cb.jpg);
+    /*background: -webkit-linear-gradient(black, green, black); /* For Safari 5.1 to 6.0 */
+    /*background: -o-linear-gradient(black, green, black); /* For Opera 11.1 to 12.0 */
+    /*background: -moz-linear-gradient(black, green, black); /* For Firefox 3.6 to 15 */
+    /*background: linear-gradient(black, rgreen, black); /* Standard syntax (must be last) */
+    /*background: -ms-linear-gradient(black, rgreen, black); <-------*/
+}
+#buttonE{
+    margin-left:1110px;
+    margin-top:499px;
+    position:relative;
+    height:215px;
+    width:300px;
+    background-image:url(pictures/GEnter.png);
+}
+#buttonE:hover{
+    background-image:url(pictures/GEntered.png);
+}
+#buttonE:active{
+    background-size:295px 215px;
+    width:295px;
+    background-image:url(pictures/GEntered.png);
+
+}
+#joke{
+    position:absolute;
+    margin-top:120px;
+    margin-left:110px; 
+    width:860px;
+}
+#line{
+    background: transparent;
+    position:absolute;
+
+    border: none;
+    color:#37be09;
+    font-family:Consolas;
+    font-size:20px;
+    width:860px;
+    margin-top:580px;
+    margin-left:120px;
+}
+input:focus{
+    outline: 0;
+}
+p>a:link{
+    text-decoration:none;
 }
