--- a/main-styles.css
+++ b/main-styles.css
@@ -13,6 +13,7 @@ body {
 
 header {
     margin-left: 10%;
+    margin-right: 10%;
     display: inline-block;
 }
 
@@ -73,36 +74,89 @@ footer {
     text-align: center;
     position: absolute;
     bottom: 0;
-    
     display: block;
     padding: 10px;
+    margin:auto;
 }
 
     footer nav ul li a:hover {
         color: purple;
         border: 4px solid red;
         border-radius: 10px;
-        margin-right: 5px;
     }
 
     footer nav ul li {
         display: inline-block;
     }
 
-@media screen and (max-width:1024px){
-    body {
-        font-size:100%;
-    }
-    
+
+img {
+    max-width: 100%;
 }
+
+@media screen and (max-width:1024px) {
+    body {
+        font-size: 100%;
+    }
+}
+
+@media screen and (max-width:820x) {
+    article {
+        padding: 10%;
+    }
+
+    header {
+        margin-right: 10%;
+    }
+
+    h1 {
+        font-size: 80%;
+    }
+
+
+    @media screen and (max-width:640px) {
+      article {
+            padding: 10%;
+            
+        }
+
+        main {
+            width:90%;
+        }
+        article {
+            padding:5px;
+        }
+        
+        footer {
+        }
+    }
+}
+
+@media screen and (max-width:480px) {
+       
+        #main{
+            padding: 3%;
+            
+        }
+        article {
+            padding:5%;
+        }
+        footer {
+        }
+    }
+
+
+
 
 @media screen and (max-width:320px) {
     body {
         font-size: 50%;
     }
-    
-}
-
-img {
-    max-width: 100%;
+   
+    #main {
+        padding: 2%;
+    }
+    article {
+            padding:3%;
+        }
 }
