--- a/06.Contacts-styles.css
+++ b/06.Contacts-styles.css
@@ -31,7 +31,7 @@ h2 {
 
 
 
-@media scree and (max-width:1200px){
+@media screen and (max-width:1200px){
 
     #soft-uni, #elysium {
         width: 100%;
