some responsive design added and other little correction

--- a/02.MainPage-styles.css
+++ b/02.MainPage-styles.css
@@ -35,6 +35,8 @@ span {
 @media screen and (max-width:820px) {
     article {
         padding: 10%;
+        padding: 5%;
+        font-size: 82%;
     }
 
     header {
