--- a/03.About-styles.css
+++ b/03.About-styles.css
@@ -1,76 +1,70 @@
 ﻿
 
 header {
-
 }
-#main{
-    margin:5px;
-    padding:10px;
-	padding-bottom:80px;
-    width:90%;
-    display:block;
-    height:auto;
+
+.main {
+    margin: auto;
+    padding: 10px;
+    padding-bottom: 80px;
+    width: 90%;
+    display: block;
+    height: auto;
 }
 
 h2 {
     margin-left: 10%;
-    color: #ff6a00;
-    text-shadow: 10px 10px 5px #808080;
+    color: black;
+    text-shadow: 5px 3px 4px #ff6a00;
 }
 
 #profiles {
-    width:100%;
-    
+    width: 100%;
 }
 
-figure{
-    width:70%;
-    height:auto;
+figure {
+    width: 70%;
+    height: auto;
 }
 
 figcaption {
-    font-size:50%;
-    padding:2%;
+    font-size: 50%;
+    padding: 2%;
 }
 
 
 #ivelin {
-    content:url(pictures/ivelin.png);
+    content: url(pictures/ivelin.png);
 }
 
 #momchil {
-    content:url(pictures/momchil.png);
+    content: url(pictures/momchil.png);
 }
 
 
-#georgi{
-    content:url(pictures/georgi.jpg);
+#georgi {
+    content: url(pictures/georgi.jpg);
 }
 
-#petar{
-    content:url(pictures/petar.jpg);
+#petar {
+    content: url(pictures/petar.jpg);
 }
 
 #apostol {
-    content:url(pictures/apostol.jpg);
+    content: url(pictures/apostol.jpg);
 }
 
 
 
 
 #profiles div {
-        background-color:white;
-        display:inline-block;
-        text-align: center;
-        width:18%;
-        height:auto;
-        border:3px solid green;
-        float: left;
-        padding:1%;
-        margin: 1%;
-    
-    
-        
+    background-color: white;
+    display: inline-block;
+    text-align: center;
+    width: 18%;
+    height: auto;
+    border: 3px solid green;
+    float: left;
+    padding: 1%;
+    margin: 1%;
 }
-
-
