--- a/main-styles.css
+++ b/main-styles.css
@@ -12,8 +12,10 @@ body {
 }
 
 header {
+    margin-top: 2%;
     margin-left: 10%;
     margin-right: 10%;
+    margin-bottom: 2%;
     display: inline-block;
 }
 
