--- a/main-styles.css
+++ b/main-styles.css
@@ -8,7 +8,7 @@ body {
     background: url('pictures/clouds.gif') repeat;
     font-family: "komikax", Calibri, 'Times New Roman';
     font-size: 150%;
-    
+
 }
 
 header {
@@ -19,23 +19,27 @@ header {
     display: inline-block;
 }
 
-
 h1 {
     background-color: rgba(255, 255, 255, 0.7);
     text-shadow: 10px 10px 5px #808080;
-    padding:10px;
-    border:1px solid green;
-    border-radius:10px;
-    width:auto;
-    text-align:center;
+    padding: 10px;
+    border: 1px solid green;
+    border-radius: 10px;
+    width: auto;
+    text-align: center;
 }
 
+h2 {
+    margin-left: 10%;
+    color: black;
+    text-shadow: 5px 3px 4px #ff6a00;
+}
 
 #nav {
     width: 100%;
     height: auto;
     text-align: center;
-    margin-top:20px;
+    margin-top: 20px;
 }
 
 section nav ul li {
@@ -48,11 +52,11 @@ section nav ul li {
     padding: 0 10px;
 }
 
-    section nav ul li:hover {
-        border: 4px solid red;
-        border-radius: 10px;
-        
-    }
+section nav ul li:hover {
+    border: 4px solid red;
+    border-radius: 10px;
+
+}
 
 @font-face {
     font-family: "komikax";
@@ -64,10 +68,9 @@ a {
     color: blue;
 }
 
-    a:visited {
-        background-color: purple;
-    }
-
+a:visited {
+    background-color: purple;
+}
 
 footer {
     background-color: gold;
@@ -78,31 +81,66 @@ footer {
     bottom: 0;
     display: block;
     padding: 10px;
-    margin:auto;
+    margin: auto;
+
 }
 
-    footer nav ul li a:hover {
-        color: purple;
-        border: 4px solid red;
-        border-radius: 10px;
-    }
+footer nav ul li a{
+    border: 4px solid gold;
+    border-radius: 10px;
 
-    footer nav ul li {
-        display: inline-block;
-    }
+}
 
+footer nav ul li a:hover {
+    border-color: red;
+
+}
+
+footer nav ul li {
+    display: inline-block;
+}
 
 img {
     max-width: 100%;
 }
+/* 04.News.html css*/
+#jokes div {
+    padding: 20px;
+    margin: 10px;
+    display: block;
+    border: 1px solid green;
+    background-color: rgba(255, 255, 255, 0.7);
+    text-align: center;
+}
 
-@media screen and (max-width:1024px) {
+figure {
+    margin: auto;
+}
+
+.fart:hover {
+    content: url(pictures/revenge-drawn.jpg);
+}
+
+figcaption {
+    background-color: rgba(255, 216, 0, 0.7);
+    font-style: italic;
+    font-size: 0.7em;
+    color: purple;
+    margin: 10px;
+
+}
+
+span {
+    text-decoration: underline;
+}
+
+@media screen and (max-width: 1024px) {
     body {
         font-size: 100%;
     }
 }
 
-@media screen and (max-width:820x) {
+@media screen and (max-width: 820x) {
     article {
         padding: 10%;
     }
@@ -115,50 +153,50 @@ img {
         font-size: 80%;
     }
 
-
-    @media screen and (max-width:640px) {
-      article {
+    @media screen and (max-width: 640px) {
+        article {
             padding: 10%;
-            
+
         }
 
         main {
-            width:90%;
+            width: 90%;
         }
+
         article {
-            padding:5px;
+            padding: 5px;
         }
-        
+
         footer {
         }
     }
 }
 
-@media screen and (max-width:480px) {
-       
-        #main{
-            padding: 3%;
-            
-        }
-        article {
-            padding:5%;
-        }
-        footer {
-        }
+@media screen and (max-width: 480px) {
+
+    #main {
+        padding: 3%;
+
     }
 
+    article {
+        padding: 5%;
+    }
 
+    footer {
+    }
+}
 
-
-@media screen and (max-width:320px) {
+@media screen and (max-width: 320px) {
     body {
         font-size: 50%;
     }
-   
+
     #main {
         padding: 2%;
     }
+
     article {
-            padding:3%;
-        }
+        padding: 3%;
+    }
 }
